@@ -198,6 +198,8 @@
 	"VoidUI_scoreboard_scale_desc" : "Set the scale of the stat panel",
 	"VoidUI_blur_title" : "Blur background",
 	"VoidUI_blur_desc" : "Blur the background when the stat panel is open",
+	"VoidUI_scoreboard_maxlevel_title" : "Show xp when max level",
+	"VoidUI_scoreboard_maxlevel_desc" : "Show the experience bar when you are at the maximum level",
 	"VoidUI_scoreboard" : "Scoreboard",
 	"VoidUI_scoreboard_title" : "Enable scoreboard",
 	"VoidUI_scoreboard_desc" : "Add a scoreboard to the stat screen where you can see statistics about you and your teammates",
@@ -230,7 +232,7 @@
 	"VoidUI_ping_frequency_title" : "Latency update fequency",
 	"VoidUI_ping_frequency_desc" : "Set how often should ping values update in seconds",
 	"VoidUI_scoreboard_toggle_title" : "Toggle button",
-	"VoidUI_scoreboard_toggle_desc" : "Set the button that toggles between scoreboard and tracked achievements",
+	"VoidUI_scoreboard_toggle_desc" : "Set the button that toggles between the scoreboard and tracked achievements",
 	"VoidUI_player" : "Player",
 	"VoidUI_kills" : "Kills",
 	"VoidUI_specials" : "Specials",
