@@ -14,7 +14,7 @@
 			"description" : "VoidUI_enable_stats_desc",
 			"callback" : "toggle_option_clbk",
 			"value" : "enable_stats"
-			"priority" : 16
+			"priority" : 17
 		},
 		{
 			"type" : "slider",
@@ -28,7 +28,7 @@
 			"min" : 0.65,
 			"step" : 0.01,
 			"localized" :  true
-			"priority" : 15
+			"priority" : 16
 		},
 		{
 			"type" : "toggle",
@@ -37,6 +37,15 @@
 			"description" : "VoidUI_blur_desc",
 			"callback" : "toggle_option_clbk",
 			"value" : "scoreboard_blur"
+			"priority" : 15
+		},
+		{
+			"type" : "toggle",
+			"id" : "scoreboard_maxlevel",
+			"title" : "VoidUI_scoreboard_maxlevel_title",
+			"description" : "VoidUI_scoreboard_maxlevel_desc",
+			"callback" : "toggle_option_clbk",
+			"value" : "scoreboard_maxlevel"
 			"priority" : 14
 		},
 		{
