@@ -54,8 +54,9 @@
 		{"hook_id" : "lib/managers/playermanager", "script_path" : "Main.lua"},
 		{"hook_id" : "lib/utils/levelloadingscreenguiscript", "script_path" : "lua/LevelLoadingScreen.lua"},
 		{"hook_id" : "lib/utils/lightloadingscreenguiscript", "script_path" : "lua/LevelLoadingScreen.lua"},
-		{ "hook_id" : "lib/network/base/clientnetworksession", "script_path" : "Main.lua" },
-		{ "hook_id" : "lib/network/base/hostnetworksession", "script_path" : "Main.lua" },
-		{ "hook_id" : "lib/setups/setup", "script_path" : "Main.lua" }
+		{"hook_id" : "lib/network/base/basenetworksession", "script_path" : "Main.lua" },
+		{"hook_id" : "lib/network/base/clientnetworksession", "script_path" : "Main.lua" },
+		{"hook_id" : "lib/network/base/hostnetworksession", "script_path" : "Main.lua" },
+		{"hook_id" : "lib/setups/setup", "script_path" : "Main.lua" }
     ]
 }
